Project TestKB {
  database_type: 'MongoDB'
  Note: '''
    # TestKB Database
    **markdown content here**
  '''
}

Enum user_type {
  admin
  user
}

Table users as U {
  id int [pk, increment]
  fist_name varchar
  last_name varchar
  email varchar
  created_at timestamp
  emp_code varchar
  note: "table 'users' contains user information"
}

Table answers {
  id int [pk]
  "text" varchar
}

Enum question_type {
  multiple_choice
}

Enum question_level {
  junior
  middle 
  senior
  expert
}

Enum skills {
  html
  css
  nodejs
  javascript
}

Table questions {
  id int [pk]
  "text" varchar
  skill skills 
  type question_type
  answers int[] [note: "list of answerId"] 
  level question_level
  correct_answer int [note: "answerId"] 
}


// Table merchants {
//   id int [pk]
//   merchant_name varchar
//   country_code int [note: "country of merchant"]
//   admin_id int [ref: > U.id]
//   created_at datetime [default: `now()`, note: "created time"]
//   note: "table 'merchants' contains merchant information"
// }
// Table countries {
//   code int [pk]
//   name varchar
//   continent_name varchar
// }
// Table order_items {
//   order_id int [ref: > orders.id]
//   product_id int    
//   quantity int [default: 1]
//   note: 'items in an order'
// }
// Table orders {
//   id int [pk]
//   user_id int [not null, unique]
//   status varchar
//   created_at varchar [note: 'When order created']
// }
// Enum products_status {
//   out_of_stock
//   in_stock
//   running_low [note: 'less than 20']
// }
// Table products {
//   id int [pk]
//   name varchar
//   merchant_id int [not null]
//   price int
//   status products_status
//   created_at datetime [default: `now()`]
  
//   Indexes {
//     (merchant_id, status) [name:'product_status']
//     id [unique]
//   }
// }
// Ref: U.country_code > countries.code  
// Ref: merchants.country_code > countries.code
// Ref: order_items.product_id > products.id
// Ref: products.merchant_id > merchants.id